manifests/service_dev.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-ui-service
  namespace: development
spec:
  selector:
    app: demo-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
